--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,48 @@
-  <div class="mx-auto">
-    <div class="col-5"></div>>
-    <h3 class="bg-primary text-white p-3">[{{getName()}}] TO Do List</h3>
-    <div class="input-group">
-        <input type="text" #todoItem class="form-control">
-        <div class="input-group-append">
-            <button class="btn btn-primary" (click)="addItem(todoItem.value)">Add</button>
+<div class="container border border-success p-2 mb-2">
+  <div class=" justify-content-center flex-column"></div>
+  <h3 class="bg-secondary text-white p-3">{{getName()}} TODO LIST</h3>
+  <div class="input-group">
+      <input type="text" #todoItem class="form-control">
+      <div class="input-group-append">
+          <button class="btn btn-secondary m-3" (click)="addItem(todoItem.value)">Add</button>
 
-        </div>
-        <div class="custom-control custom-checkbox m-3">
-          <input type="checkbox" class="custom-control-input" name="" id="" [(ngModel)]="isDisplay">
-          <label class="custom-control-label" for="dispaly all">Display all</label>
-        </div>
+      </div>
 
-        <table class="table table-striped-bordered">
-         <thead>
-           <tr>
-            <th>Index</th>
-             <th>Task</th>
-             <th>Actions</th>
+
+
+  </div>
+  <div class="custom-control custom-checkbox m-3">
+    <input type="checkbox" class="custom-control-input" name="" id="" [(ngModel)]="isDisplay">
+    <label class="custom-control-label" for="dispaly all">Display all</label>
+  </div>
+  <div>
+    <table class="table table-striped-bordered">
+      <thead>
+        <tr>
+         <th>Index</th>
+          <th>Task</th>
+          <th>Actions</th>
+          <th>Result</th>
+        </tr>
+      </thead>
+       <tbody>
+           <tr *ngFor="let item of getItems(); let i=index">
+               <td>{{i+1}}</td>
+               <td>{{item.description}}</td>
+               <td>
+                   <input type="checkbox" [(ngModel)]="item.action"/>
+               </td>
+
+               <td [ngSwitch]="item.action" class="d-flex justify-content-between">
+                 <span *ngSwitchCase="true">Yes</span>
+                 <span *ngSwitchCase="false">No</span>
+                 <span *ngSwitchDefault></span>
+                 <button class="btn btn-secondary " (click)="deleteItem(i)">Delete</button>
+               </td>
+
            </tr>
-         </thead>
-          <tbody>
-              <tr *ngFor="let item of getItems(); let i=index">
-                  <td>{{i+1}}</td>
-                  <td>{{item.description}}</td>
-                  <td>
-                      <input type="checkbox" [(ngModel)]="item.action"/>
-                  </td>
-                  <td [ngSwitch]="item.action">
-                    <span *ngSwitchCase="true">Yes</span>
-                    <span *ngSwitchCase="false">No</span>
-                    <span *ngSwitchDefault></span>
-                  </td>
-              </tr>
-         </tbody>
-        </table>
-    </div>
-   </div>
+      </tbody>
+     </table>
+  </div>
+</div>
 
